@@ -18,27 +18,33 @@
 
 package org.apache.jena.sparql.expr;
 
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.fail;
 
-import java.util.Arrays;
-import java.util.Collection;
+import java.util.List;
+import java.util.stream.Stream;
 
-import org.apache.jena.query.ARQ ;
-import org.apache.jena.sparql.engine.binding.BindingFactory ;
-import org.junit.AfterClass;
-import org.junit.BeforeClass ;
-import org.junit.Test ;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
-import org.junit.runners.Parameterized.Parameters;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedClass;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
-@RunWith(Parameterized.class)
+import org.apache.jena.query.ARQ;
+import org.apache.jena.sparql.engine.binding.BindingFactory;
+
+@ParameterizedClass(name="{index}: {0}")
+@MethodSource("provideArgs")
 public class TestRegex
 {
-    @Parameters(name = "{index}: {0}")
-    public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][] { { "Java Regex",   RegexEngine.RegexImpl.Java },
-                                              { "Xerces Regex",  RegexEngine.RegexImpl.Xerces } });
+
+    private static Stream<Arguments> provideArgs() {
+         List<Arguments> x = List.of(
+                Arguments.of( "Java Regex", RegexEngine.RegexImpl.Java),
+                Arguments.of( "Xerces Regex", RegexEngine.RegexImpl.Xerces)
+                    );
+        return x.stream();
     }
 
     public TestRegex(String name, RegexEngine.RegexImpl regexImpl) {
@@ -47,53 +53,64 @@ public class TestRegex
 
     private static Object value;
 
-    @BeforeClass
+    @BeforeAll
     public static void beforeClass() {
         value = ARQ.getContext().get(ARQ.regexImpl);
     }
 
-    @AfterClass
+    @AfterAll
     public static void afterClass() {
         ARQ.getContext().set(ARQ.regexImpl, value);
     }
 
-    @Test public void testRegex01() { regexTest( "ABC",  "ABC",  null,   true) ; }
-    @Test public void testRegex02() { regexTest( "ABC",  "abc",  null,   false) ; }
-    @Test public void testRegex03() { regexTest( "ABC",  "abc",  "",     false) ; }
-    @Test public void testRegex04() { regexTest( "ABC",  "abc",  "i",    true) ; }
-    @Test public void testRegex05() { regexTest( "abc",  "B",    "i",    true) ; }
-    @Test public void testRegex06() { regexTest( "ABC",  "^ABC", null,   true) ; }
-    @Test public void testRegex07() { regexTest( "ABC",  "BC",   null,   true) ; }
-    @Test public void testRegex08() { regexTest( "ABC",  "^BC",  null,   false) ; }
-    @Test public void testRegex09() { regexTest( "[[",   "[",    "q",    true) ; }
+    @Test public void testRegex01() { regexTest( "ABC",  "ABC",  null,   true); }
+    @Test public void testRegex02() { regexTest( "ABC",  "abc",  null,   false); }
+    @Test public void testRegex03() { regexTest( "ABC",  "abc",  "",     false); }
+    @Test public void testRegex04() { regexTest( "ABC",  "abc",  "i",    true); }
+    @Test public void testRegex05() { regexTest( "abc",  "B",    "i",    true); }
+    @Test public void testRegex06() { regexTest( "ABC",  "^ABC", null,   true); }
+    @Test public void testRegex07() { regexTest( "ABC",  "BC",   null,   true); }
+    @Test public void testRegex08() { regexTest( "ABC",  "^BC",  null,   false); }
+    @Test public void testRegex09() { regexTest( "[[",   "[",    "q",    true); }
 
     public void regexTest(String value, String pattern, String flags, boolean expected) {
-        Expr s = NodeValue.makeString(value) ;
-        E_Regex r = new E_Regex(s, pattern, flags) ;
-        NodeValue nv = r.eval(BindingFactory.empty(), null) ;
-        boolean b = nv.getBoolean() ;
+        Expr s = NodeValue.makeString(value);
+        E_Regex r = new E_Regex(s, pattern, flags);
+        NodeValue nv = r.eval(BindingFactory.empty(), null);
+        boolean b = nv.getBoolean();
         if ( b != expected )
-            fail(fmtTest(value, pattern, flags)+" ==> "+b+" expected "+expected) ;
+            fail(fmtTest(value, pattern, flags)+" ==> "+b+" expected "+expected);
     }
 
     private String fmtTest(String value, String pattern, String flags) {
-        String tmp = "regex(\""+value+"\", \""+pattern+"\"" ;
+        String tmp = "regex(\""+value+"\", \""+pattern+"\"";
         if ( flags != null )
-            tmp = tmp + ", \""+flags+"\"" ;
-        tmp = tmp + ")" ;
-        return tmp ;
+            tmp = tmp + ", \""+flags+"\"";
+        tmp = tmp + ")";
+        return tmp;
     }
 
     // Bad regex
-    @Test(expected=ExprEvalException.class)
-    public void testRegexErr1() { regexTest("ABC", "(", null, false) ; }
+    @Test
+    public void testRegexErr1() {
+        assertThrows(ExprEvalException.class, ()->
+            regexTest("ABC", "(", null, false)
+                );
+    }
 
     // No such flag
-    @Test(expected=ExprEvalException.class)
-    public void testRegexErr2() { regexTest("ABC", "abc", "g", false) ; }
+    @Test
+    public void testRegexErr2() {
+        assertThrows(ExprEvalException.class, ()->
+            regexTest("ABC", "abc", "g", false)
+                );
+    }
 
     // No such flag
-    @Test(expected=ExprEvalException.class)
-    public void testRegexErr3() { regexTest("ABC", "abc", "u", false) ; }
-
+    @Test
+    public void testRegexErr3() {
+        assertThrows(ExprEvalException.class, ()->
+            regexTest("ABC", "abc", "u", false)
+                );
+    }
 }
